tests/errors/undeclared.knv
fn main() -> void {
    exit x;
}
